# Libreria

Samples/SampleXrFramework/: CMakeLists.txt
Samples/SampleXrFramework/Src/: XrApp.cpp
Samples/XrSamples/LibreriaSupabase/: CMakeLists.txt  README.md
Samples/XrSamples/LibreriaSupabase/Projects/Android/: AndroidManifest.xml  build.gradle  settings.gradle
Samples/XrSamples/LibreriaSupabase/Src/: main.cpp
Samples/XrSamples/LibreriaSupabase/Src/Telemetry/: AndroidUploader.cpp  AndroidUploader.h  TelemetryManager.cpp  TelemetryManager.h  TelemetryTypes.h  VRTypes.h
Samples/XrSamples/LibreriaSupabase/Src/Telemetry/Adapters/: InterfaceDataAdapter.h  OpenXRAdapter.h
Samples/XrSamples/LibreriaSupabase/java/: HttpHelper.java  MainActivity.java
Samples/XrSamples/LibreriaSupabase/res/values/: strings.xml
